# self-organizer

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
app/: __init__.py  data.py  main.py  models.py  services.py  settings.py
app/templates/: base.html  dashboard.html  detail.html  index.html  list.html
app/tests/: test_save_invoice.py
src/core/entity/: __init__.py  invoice.py
src/core/interface/: __init__.py  file_reader.py  gpt_engine.py  usecase.py
src/core/usecase/: __init__.py
src/core/usecase/invoice/: create_invoice.py  read_file.py
src/infra/: settings.py
src/infra/adapters/: gemini_gpt_engine.py  pypdf_file_reader.py
src/infra/adapters/mock/: __init__.py  fake_file_reader.py  fake_gpt_engine.py
test/unittest/: test_read_file_usecase.py
